Criando Modelo de Categoria, e recurso do modelo. Criando metodos para listar categorias, salvar, e buscar por codigo.

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>flyway-core</artifactId>
         </dependency>
 
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
 
     </dependencies>
 
