--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,17 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <!-- Hibernate Java 8 Support-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-java8</artifactId>
+        </dependency>
+
+        <!-- Suporte do Jackson para as data do Java 8 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
 
     </dependencies>
 
