--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-jwt</artifactId>
+            <version>1.1.1.RELEASE</version>
+        </dependency>
+
         <!-- Necessário para o funcionamento do Opaque Token -->
         <dependency>
             <groupId>com.nimbusds</groupId>
